--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-primary">
-<a class="navbar-brand" href="/">
+<a class="navbar-brand m-3" href="/">
   Angular Simple CRUD
 </a>
 </nav>
@@ -9,7 +9,9 @@
       <ul class="list-group">
         <li 
         *ngFor="let employee of employeeArray"
-        class="list-group-item list-group-item-action">
+        class="list-group-item list-group-item-action"
+        (click)="openForEdit(employee)"
+        [class.active]="employee == selectedEmployee">
         <span class="badge badge-light">{{employee.id}}</span>{{ employee.name }} - {{ employee.country}}
         </li>
       </ul>
@@ -18,13 +20,20 @@
           <div class="card-title">
             Insert new Employee
           </div>
-          <div class="form-group">
+          <div class="form-group mb-4">
             <input type="text" [(ngModel)]="selectedEmployee.name" placeholder="Insert Name" class="form-control">
           </div>
           <div class="form-group">
             <input type="text" [(ngModel)]="selectedEmployee.country" placeholder="Insert a country" class="form-control">
           </div>
-          
+          <button (click)="addOrEdit()" class="btn btn-primary mt-4">
+            Submit
+          </button>
+          <button 
+          *ngIf="selectedEmployee.id !== 0"
+          class="btn btn-danger mt-4"
+          (click)="delete()">
+          Delete</button>
         </div>
       </div>
     </div>
